Trabalho3/Bela.java
/* Generated By:JavaCC: Do not edit this line. Bela.java */
import java.io.*;
public class Bela implements BelaConstants {

  public static void main(String args[]) throws ParseException,IOException {

        Bela analisador = new Bela(new FileInputStream(args[0]));
        analisador.Bela();
  }

  static final public void Bela() throws ParseException {
    Main();
    FuncList();
    jj_consume_token(0);
  }

  static final public void Main() throws ParseException {
    jj_consume_token(MAIN);
    jj_consume_token(APAR);
    jj_consume_token(FPAR);
    jj_consume_token(ACHAVES);
    Vardecl();
    Seqcomandos();
    jj_consume_token(FCHAVES);
  }

  static final public void Vardecl() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(VAR);
      Tipo();
      jj_consume_token(ID);
      jj_consume_token(PVIRGULA);
    }
  }

  static final public void Tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TIPOFLOAT:
      jj_consume_token(TIPOFLOAT);
      break;
    case TIPOBOOL:
      jj_consume_token(TIPOBOOL);
      break;
    case TIPOVOID:
      jj_consume_token(TIPOVOID);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Seqcomandos() throws ParseException {
    Comando();
    SeqcomandosL();
  }

  static final public void SeqcomandosL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case WHILE:
    case RETURN:
    case PRINTLN:
    case ID:
      Comando();
      SeqcomandosL();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
  }

  static final public void Comando() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      jj_consume_token(ID);
      ComandoId();
      break;
    case IF:
      jj_consume_token(IF);
      Exp();
      jj_consume_token(THEN);
      jj_consume_token(ACHAVES);
      Seqcomandos();
      jj_consume_token(FCHAVES);
      jj_consume_token(PVIRGULA);
      break;
    case WHILE:
      jj_consume_token(WHILE);
      Exp();
      jj_consume_token(ACHAVES);
      Seqcomandos();
      jj_consume_token(FCHAVES);
      jj_consume_token(PVIRGULA);
      break;
    case RETURN:
      jj_consume_token(RETURN);
      Exp();
      jj_consume_token(PVIRGULA);
      break;
    case PRINTLN:
      jj_consume_token(PRINTLN);
      Exp();
      jj_consume_token(PVIRGULA);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ComandoId() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATRIBUICAO:
      jj_consume_token(ATRIBUICAO);
      ComandoAtrib();
      break;
    case APAR:
      jj_consume_token(APAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case APAR:
      case TRUE:
      case FALSE:
      case NUM:
      case ID:
        ListaExp();
        break;
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(FPAR);
      jj_consume_token(PVIRGULA);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ComandoAtrib() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case readInput:
      jj_consume_token(readInput);
      jj_consume_token(APAR);
      jj_consume_token(FPAR);
      jj_consume_token(PVIRGULA);
      break;
    case APAR:
    case TRUE:
    case FALSE:
    case NUM:
    case ID:
      Exp();
      jj_consume_token(PVIRGULA);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Exp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case APAR:
      jj_consume_token(APAR);
      Exp();
      Op();
      Exp();
      jj_consume_token(FPAR);
      break;
    case TRUE:
    case FALSE:
    case NUM:
    case ID:
      Fator();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Fator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      jj_consume_token(ID);
      FatorID();
      break;
    case NUM:
      jj_consume_token(NUM);
      break;
    case TRUE:
      jj_consume_token(TRUE);
      break;
    case FALSE:
      jj_consume_token(FALSE);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void FatorID() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case APAR:
      jj_consume_token(APAR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case APAR:
      case TRUE:
      case FALSE:
      case NUM:
      case ID:
        ListaExp();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(FPAR);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
  }

  static final public void Op() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPMAIS:
      jj_consume_token(OPMAIS);
      break;
    case OPMENOS:
      jj_consume_token(OPMENOS);
      break;
    case OPMULT:
      jj_consume_token(OPMULT);
      break;
    case OPDIV:
      jj_consume_token(OPDIV);
      break;
    case OPE:
      jj_consume_token(OPE);
      break;
    case OPOU:
      jj_consume_token(OPOU);
      break;
    case OPMENOR:
      jj_consume_token(OPMENOR);
      break;
    case OPMAIOR:
      jj_consume_token(OPMAIOR);
      break;
    case OPIGUAL:
      jj_consume_token(OPIGUAL);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ListaExp() throws ParseException {
    Exp();
    ListaExpL();
  }

  static final public void ListaExpL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VIRGULA:
      jj_consume_token(VIRGULA);
      Exp();
      ListaExpL();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
  }

  static final public void FuncList() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCAO:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_2;
      }
      Func();
    }
  }

  static final public void Func() throws ParseException {
    jj_consume_token(FUNCAO);
    Tipo();
    jj_consume_token(ID);
    jj_consume_token(APAR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TIPOFLOAT:
    case TIPOBOOL:
    case TIPOVOID:
      ListaArg();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    jj_consume_token(FPAR);
    jj_consume_token(ACHAVES);
    Vardecl();
    Seqcomandos();
    jj_consume_token(FCHAVES);
  }

  static final public void ListaArg() throws ParseException {
    Tipo();
    jj_consume_token(ID);
    ListaArgL();
  }

  static final public void ListaArgL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VIRGULA:
      jj_consume_token(VIRGULA);
      Tipo();
      jj_consume_token(ID);
      ListaArgL();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  static final public void ListaTokens() throws ParseException {
 Token t;
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAIN:
      case APAR:
      case FPAR:
      case ACHAVES:
      case FCHAVES:
      case VAR:
      case PVIRGULA:
      case TRUE:
      case FALSE:
      case TIPOFLOAT:
      case TIPOBOOL:
      case TIPOVOID:
      case ATRIBUICAO:
      case IF:
      case THEN:
      case WHILE:
      case readInput:
      case RETURN:
      case PRINTLN:
      case OPMAIS:
      case OPMENOS:
      case OPMULT:
      case OPDIV:
      case OPE:
      case OPOU:
      case OPMENOR:
      case OPMAIOR:
      case OPIGUAL:
      case VIRGULA:
      case FUNCAO:
      case NUM:
      case ID:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MAIN:
        jj_consume_token(MAIN);
           System.out.println("Palavra reservada: main");
        break;
      case VAR:
        jj_consume_token(VAR);
           System.out.println("Palavra reservada: var");
        break;
      case PRINTLN:
        jj_consume_token(PRINTLN);
              System.out.println("Palavra reservada: printLn");
        break;
      case APAR:
        jj_consume_token(APAR);
           System.out.println("Abre par\u00eanteses: (");
        break;
      case FPAR:
        jj_consume_token(FPAR);
           System.out.println("Fecha par\u00eanteses: )");
        break;
      case ACHAVES:
        jj_consume_token(ACHAVES);
              System.out.println("Abre chaves: {");
        break;
      case FCHAVES:
        jj_consume_token(FCHAVES);
              System.out.println("Fecha chaves: }");
        break;
      case TIPOFLOAT:
        jj_consume_token(TIPOFLOAT);
                System.out.println("Tipo: float");
        break;
      case TIPOBOOL:
        jj_consume_token(TIPOBOOL);
               System.out.println("Tipo: bool");
        break;
      case TIPOVOID:
        jj_consume_token(TIPOVOID);
               System.out.println("Tipo: void");
        break;
      case PVIRGULA:
        jj_consume_token(PVIRGULA);
               System.out.println("Ponto e v\u00edrgula: ;");
        break;
      case TRUE:
        jj_consume_token(TRUE);
           System.out.println("Palavra reservada: true");
        break;
      case FALSE:
        jj_consume_token(FALSE);
            System.out.println("Palavra reservada: false");
        break;
      case ATRIBUICAO:
        jj_consume_token(ATRIBUICAO);
                 System.out.println("Atribui\u00e7\u00e3o: =");
        break;
      case IF:
        jj_consume_token(IF);
         System.out.println("Palavra reservada: if");
        break;
      case THEN:
        jj_consume_token(THEN);
           System.out.println("Palavra reservada: then");
        break;
      case WHILE:
        jj_consume_token(WHILE);
            System.out.println("Palavra reservada: while");
        break;
      case readInput:
        jj_consume_token(readInput);
                System.out.println("Palavra reservada: readInput");
        break;
      case RETURN:
        jj_consume_token(RETURN);
             System.out.println("Palavra reservada: return");
        break;
      case OPMAIS:
        jj_consume_token(OPMAIS);
             System.out.println("Operador: +");
        break;
      case OPMENOS:
        jj_consume_token(OPMENOS);
              System.out.println("Operador: -");
        break;
      case OPMULT:
        jj_consume_token(OPMULT);
             System.out.println("Operador: *");
        break;
      case OPDIV:
        jj_consume_token(OPDIV);
            System.out.println("Operador: /");
        break;
      case OPE:
        jj_consume_token(OPE);
          System.out.println("Operador l\u00f3gico: &&");
        break;
      case OPOU:
        jj_consume_token(OPOU);
           System.out.println("Operador l\u00f3gico: ||");
        break;
      case OPMENOR:
        jj_consume_token(OPMENOR);
              System.out.println("Operador: <");
        break;
      case OPMAIOR:
        jj_consume_token(OPMAIOR);
              System.out.println("Operador: >");
        break;
      case OPIGUAL:
        jj_consume_token(OPIGUAL);
              System.out.println("Operador: ==");
        break;
      case VIRGULA:
        jj_consume_token(VIRGULA);
              System.out.println("V\u00edrgula: ,");
        break;
      case FUNCAO:
        t = jj_consume_token(FUNCAO);
               System.out.println("Fun\u00e7\u00e3o: "+ t.image);
        break;
      case NUM:
        t = jj_consume_token(NUM);
            System.out.println("N\u00famero: "+ t.image);
        break;
      case ID:
        t = jj_consume_token(ID);
           System.out.println("Identificador: "+ t.image);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(0);
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public BelaTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[18];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x400,0x1c000,0xd40000,0xd40000,0x3040,0x20040,0x203040,0x3040,0x3000,0x3040,0x40,0xff000000,0x0,0x0,0x1c000,0x0,0xffffffe0,0xffffffe0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x10,0x10,0x18,0x0,0x18,0x18,0x18,0x18,0x0,0x1,0x2,0x4,0x0,0x2,0x1f,0x1f,};
   }

  /** Constructor with InputStream. */
  public Bela(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Bela(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new BelaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Bela(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new BelaTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Bela(BelaTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(BelaTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[37];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 18; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 37; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
